fix alignment of icons in IE8

--- a/stylesheets/components/common/_icon.scss
+++ b/stylesheets/components/common/_icon.scss
@@ -74,7 +74,7 @@
 
 .icon--desktop {
   background-position: -371px -174px;
-  width: 16px;
+  width: 20px;
   height: 13px;
 
   // temp style to adjust icon to sit with text
@@ -99,9 +99,9 @@
 }
 
 .icon--speech-green {
-  background-position: -402px -75px;
+  background-position: -402px -72px;
   width: 20px;
-  height: 16px;
+  height: 18px;
 }
 
 // LIST ICONS
